--- a/CoffeeCo/index.html
+++ b/CoffeeCo/index.html
@@ -716,7 +716,7 @@
 
         <div class="footer-brand">
           <a href="#" class="logo">
-            <img src="./assets/images/logo.svg" width="216" height="80" class="w-100" alt="Keofi home">
+            <img src="./assets/images/logo3.jpg" width="216" height="80" class="w-100" alt="Keofi home">
           </a>
         </div>
 
