--- a/CoffeeCo/index.html
+++ b/CoffeeCo/index.html
@@ -757,7 +757,7 @@
               <div>
                 <span class="span">Location :</span>
 
-                <p>55 Main Street, New York</p>
+                <p>55 Main Street, Tamil Nadu</p>
               </div>
             </div>
           </li>
@@ -769,7 +769,7 @@
               <div>
                 <span class="span">Email Address :</span>
 
-                <p>keofi@gmail.com</p>
+                <p>tanjore@gmail.com</p>
               </div>
             </div>
           </li>
