--- a/CoffeeCo/index.html
+++ b/CoffeeCo/index.html
@@ -470,13 +470,13 @@
 
             <p class="section-subtitle reveal-right" data-reveal>Why Choose Us</p>
 
-            <h2 class="h2 section-title reveal-right" id="feature-label" data-reveal>New London Coffee Founded For
+            <h2 class="h2 section-title reveal-right" id="feature-label" data-reveal>Tamil Nadu Coffee Founded For
               Extraordinary Test
             </h2>
 
             <p class="section-text reveal-right" data-reveal>
-              Sed ut perspiciatis unde omnis iste natus error voluptate accusantium doloremque laudantium, totam rem
-              aperiam eaque ipsa quae abillo inventore veritatis
+              Our unwavering commitment to preserving the authentic taste and aroma of South 
+              Indian filter coffee sets us apart. With Tanjore Degree Coffee, you can savor the true essence of this beloved beverage in every cup.
             </p>
 
             <ul class="feature-list">
@@ -493,7 +493,7 @@
                     <h3 class="h3 card-title">Natural Coffee Beans</h3>
 
                     <p class="card-text">
-                      Sed ut perspiciatis unde omnis iste natus error voluptate accusantium doloremque
+                     This dedication to natural beans not only enhances the flavor but also supports sustainable farming practices.
                     </p>
                   </div>
 
@@ -512,7 +512,7 @@
                     <h3 class="h3 card-title">100% ISO Certification</h3>
 
                     <p class="card-text">
-                      Sed ut perspiciatis unde omnis iste natus error voluptate accusantium doloremque
+                      This certification guarantees that our processes meet international standards, ensuring you receive the best product every time.
                     </p>
                   </div>
 
