--- a/CoffeeCo/index.html
+++ b/CoffeeCo/index.html
@@ -85,7 +85,7 @@
 
         <p class="header-top-text">
           <ion-icon name="location-outline" aria-hidden="true"></ion-icon>
-          <span class="span">Location :</span> 55 Main Street, New York
+          <span class="span">Location :</span> 55 Main Street, Tamil Nadu
         </p>
 
       </div>
